# ScreenFilter

./: .gitignore  README.md  pubspec.yaml
lib/: main.dart
lib/models/: advanced_config.dart  filter_preset.dart  overlay_component.dart  screen_effect.dart  shader_preset.dart
lib/services/: dx11_shader_ffi.dart  settings_service.dart  shader_filter_service.dart  win32_helpers.dart
lib/ui/: console_panel.dart
lib/ui/advanced/: advanced_page.dart
lib/ui/color_picker/: color_picker.dart  color_picker_panel.dart
lib/ui/color_picker/pickers/: hsv_picker.dart  palette_hue_picker.dart  palette_saturation_picker.dart  palette_value_picker.dart  rgb_picker.dart  swatches_picker.dart  wheel_picker.dart
lib/ui/color_picker/widgets/: alpha_picker.dart  hex_picker.dart  palette_picker.dart  slider_picker.dart  slider_title.dart
lib/ui/overlays/: clock_overlay.dart  focus_mode_overlay.dart  region_mask_clipper.dart  region_mask_drawing_overlay.dart  slogan_overlay.dart  spotlight_overlay.dart  watermark_overlay.dart
lib/ui/sandbox/: shader_code_editor.dart  shader_sandbox_page.dart  uniform_controls_panel.dart
lib/ui/widgets/: screen_position_picker.dart
native/dx11_shader_engine/: CMakeLists.txt
native/dx11_shader_engine/include/: shader_engine.h
native/dx11_shader_engine/src/: shader_engine.cpp
shaders/: filter.frag
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
